Collapse header icon fix
Making it smaller and fixing event text.

--- a/assets/forplay-mobile.less
+++ b/assets/forplay-mobile.less
@@ -385,6 +385,11 @@ body.nav .nav-set ul {
 	display: none;
 }
 
+.nav-set h3 span,
+.nav-set button span {
+	.clip
+}
+
 
 
 
