--- a/assets/forplay.less
+++ b/assets/forplay.less
@@ -866,7 +866,8 @@ header.read .nav-set .special {
 	-webkit-filter: invert(1);
 	filter: invert(1);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 64px 64px;
+	background-position: center center;
 }
 
 .nav-set .special button:focus {
@@ -1240,6 +1241,7 @@ main.read #read {
 .layout.img .img-proxy {
 	float: left;
 	padding: 2.08%;
+	position: relative;
 }
 
 .layout.inside .img-proxy > p,
