--- a/assets/media.less
+++ b/assets/media.less
@@ -142,5 +142,17 @@ only screen and (max-width: 1440px) {
 	.layout .center-col .hype strong {
 		font-size: 14pt;
 	}
+	
+	header.read .nav-set .special {
+		right: 0;
+		width: 32px;
+		height: 32px;
+		margin: 1.25%;
+		background-size: 32px 32px;
+	}
+	
+	header.read .nav-set .special button {
+		background-size: 32px 32px;
+	}
 }
   
